# airflow-declarative

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  airflow_env.sh  pyproject.toml  setup.cfg  setup.py  tox-pip9.sh  tox.ini
docs/: Makefile  conf.py  index.rst
patches/: 1.10.10.patch  1.10.5.patch  1.10.6.patch  1.10.9.patch  1.8.1.patch  2.1.3.patch
src/airflow_declarative/: __init__.py  builder.py  compat.py  operators.py  schema.py  trafaret.py  transformer.py
src/docs/: conf.py  index.rst  installation.rst  intro.rst  reference.rst  testing.rst
tests/: __init__.py  conftest.py  test_bad_dags.py  test_callback_tasks.py  test_example_bash_operator.py  test_good_dags.py  test_good_without_imports.py  test_integer_callback_arg.py  test_metadata.py  test_template_with_complex_jinja.py  test_template_with_defaults.py  test_template_with_dicts.py  test_template_with_from_stdout.py  test_template_with_invalid_schema_before_do.py  test_timedelta_sensor.py  utils.py
tests/dags/airflow-errors/: README.rst  flow-cycle.yaml
tests/dags/good/: README.rst  callback-tasks.yaml  check-callbacks.yaml  email.yaml  example_bash_operator.yaml  executor-config.yaml  integer_callback_arg.yaml  schedule-interval-cron-preset.yaml  schedule-interval-cron.yaml  schedule-interval-none.yaml  template-defaults.yaml  template-with-complex-jinja.yaml  template-with-dicts.yaml  template-with-from-stdout.yaml  template-with-invalid-schema-before-do.yaml  template-with-using.yaml  template_string_param.yaml  timedelta-sensor.yaml  version.yaml
tests/dags/good-without-imports/: unknown-importables.yaml
tests/dags/logic-errors/: README.rst  duplicate-tasks.yaml  missed-flow-downstream.yaml  missed-flow-task.yaml
tests/dags/schema-errors/: README.rst  bad-class-module.yaml  bad-class.yaml  bad-default-args.yaml  bad-email.yaml  bad-interval.yaml  bad-start-date.yaml  bad-version.yaml  bad-with-items-both-using-and-from-stdout.yaml  callback-is-not-callable.yaml  callback-missed-param.yaml  callback-unknown-param.yaml  class-and-callback.yaml  class-imports-not-a-class.yaml  class-is-not-a-string.yaml  cron-not-supported.yaml  crontab-bad.yaml  non-existed-class.yaml
